@@ -2,7 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
-1-Aug-2005
+04-Aug-2005
+~~~~~~~~~~~
+Bugfix: Ultimate++ could crash the filer when its window was iconified
+	(Guido Schimmels).
+
+01-Aug-2005
 ~~~~~~~~~~
 Updated Dutch translation (Jan Wagemakers).
 
